Change Website Look

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,8 +82,8 @@
             <tr>
               <th>Standard</th>
               <th>Publication Date</th>
-              <th>TFIDF Keywords (Top 10)</th>
-              <th>Contextual Keywords (Top 10)</th>
+              <th>TFIDF Keywords</th>
+              <th>Contextual Keywords</th>
               <th>Combined Keywords</th>
             </tr>
           </thead>
